--- a/index.html
+++ b/index.html
@@ -7,13 +7,111 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Skranji&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="Quartz.css">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 
-<body>
+<style>
+  body.debug .container,
+  body.debug .container-fluid {
+    outline: 2px double blue;
+    outline-offset: -2px;
+  }
 
+  body.debug .row {
+    outline: 2px dashed red;
+    outline-offset: -2px;
+  }
+
+  body.debug [class*="col-"] {
+    outline: 2px dotted forestgreen;
+    outline-offset: -3px;
+  }
+</style>
+
+<body class="debug">
+
+  <header class="container-fluid sticky-top p-0 logotxt">
+    <div class="row headerbkg">
+      <div class="col p-0">
+        <nav class="navbar navbar-info text-light">
+          <a class="navbar-brand" href="#">
+            <img
+              src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fGdhbWV8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+              width="30px" height="30px" class="d-inline-block align-top" alt="cave">
+            GP
+          </a>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <main class="container-fluid">
+    <!--NOTE This is where my first row with the Card Buttons will be. It will Show the User's Rock Paper Scissors on the Left, and The Computers Random Card. -->
+    <div class="row">
+      <div class="col-md-8 d-flex align-self-center flex-wrap flex-column">
+        <div class="row">
+          <div class="col-md-12 d-flex justify-content-center">
+            <h1>Choose Your Weapon!</h1>
+          </div>
+        </div>
+        <div class="row d-flex justify-content-center" id="Cards">
+        </div>
+      </div>
+      <div class="col-md-4 d-flex justify-content-center align-self-center">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Rock</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- NOTE This is where the user's and Computers choice will show -->
+    <div class="row">
+      <div class="col-md-5 d-flex justify-content-center align-self-center">
+        <div class="row">
+          <div class="col-md-12 d-flex justify-content-center">
+            <h1 id="weapon-choice"></h1>
+          </div>
+          <div class="col-md-12" id="weapon-img">
+
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2 d-flex justify-content-center align-self-center">
+        <h3>Versus</h3>
+      </div>
+      <div class="col-md-5 d-flex justify-content-center align-self-center">
+
+        <div class="card m-2 box-shadow-dark" style="width: 25rem; height: 25rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Rock</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+  </main>
+
+  <footer class="container-fluid p-0">
+    <div class="row ">
+      <div class="col">
+        <div class="row d-flex justify-content-center pt-3 pb-3 ">
+          <div class="col-md-10 d-flex align-self-center flex-column logotxt">
+            <h5>Gamer's Pad</h5>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="app.js"></script>
 </body>
 
 </html>
