got the user choice to work

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- NOTE This is where the user's and Computers choice will show -->
     <div class="row">
       <div class="col-md-5 d-flex justify-content-center align-self-center">
-        <div class="row">
+        <div class="row d-flex justify-content-center">
           <div class="col-md-12 d-flex justify-content-center">
             <h1 id="weapon-choice"></h1>
           </div>
@@ -80,15 +80,24 @@
           </div>
         </div>
       </div>
-      <div class="col-md-2 d-flex justify-content-center align-self-center">
-        <h3>Versus</h3>
+      <div class="col-md-2 d-flex justify-content-center align-self-center flex-column text-center">
+        <div>
+          <h2>Your Score</h2>
+          <h3>0</h3>
+        </div>
+        <h3 class="pb-4 pt-4">Versus</h3>
+        <div>
+          <h2>Computer Score</h2>
+          <h3>0</h3>
+        </div>
       </div>
       <div class="col-md-5 d-flex justify-content-center align-self-center">
+        <div class="row d-flex justify-content-center">
+          <div class="col-md-12 d-flex justify-content-center">
+            <h1>Computer Chose</h1>
+          </div>
+          <div class="col-md-12" id="weapon-img">
 
-        <div class="card m-2 box-shadow-dark" style="width: 25rem; height: 25rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Rock</h5>
           </div>
         </div>
       </div>
