worked on computer vs player select

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="col-md-12 d-flex justify-content-center">
             <h1 id="weapon-choice"></h1>
           </div>
-          <div class="col-md-12" id="weapon-img">
+          <div class="col-md-12 d-flex justify-content-center" id="weapon-img">
 
           </div>
         </div>
@@ -94,9 +94,9 @@
       <div class="col-md-5 d-flex justify-content-center align-self-center">
         <div class="row d-flex justify-content-center">
           <div class="col-md-12 d-flex justify-content-center">
-            <h1>Computer Chose</h1>
+            <h1 id="computer-weapon"></h1>
           </div>
-          <div class="col-md-12" id="weapon-img">
+          <div class="col-md-12 d-flex justify-content-center" id="computer-img">
 
           </div>
         </div>
